- current state is saved back to the preferences now - fixed opened-twisty not showing - adapted names of the preferences

--- a/extension/skin/classic/mac/panel.css
+++ b/extension/skin/classic/mac/panel.css
@@ -41,7 +41,7 @@ body {
 .nodeBox.open > .nodeLabel > .twisty,
 .netRow.opened > .netCol > .netHrefLabel,
 .netPageRow.opened > .netCol > .netPageTitle,
-.netHeadersGroup.opened > .twisty,
+.netHeadersGroup.opened > .netInfoHeadersGroup > .twisty,
 .objectBox-stackFrame.hasTwisty.opened,
 .objectBox-functionCall.hasTwisty.opened,
 .computedStylesGroup.opened > .cssComputedHeader > .twisty,
